--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "cache-loader": "^4.1.0",
+    "css-loader": "^3.2.0",
+    "dart-sass": "^1.22.10",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
+    "url-loader": "^2.1.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.3",
