--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
-    "build": "webpack --config ./webpack.config.js",
-    "dev": "webpack-dev-server --env.dev",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "cache-loader": "^4.1.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
     "dart-sass": "^1.22.10",
     "file-loader": "^4.2.0",
